LRAC-13948 Fix sidebar z-index to avoid Clay popovers be below of sidebar

--- a/modules/dxp/apps/osb/osb-faro/osb-faro-web/src/main/css/_sidebar.scss
+++ b/modules/dxp/apps/osb/osb-faro/osb-faro-web/src/main/css/_sidebar.scss
@@ -8,7 +8,7 @@
 	position: fixed;
 	transition: width 0.2s ease-out;
 	width: $sidebarOpenWidth;
-	z-index: 1030;
+	z-index: 1000;
 
 	&.collapsed {
 		width: $sidebarClosedWidth;
